resolved layout of about on tablet

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -266,7 +266,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+/* @media screen and (max-width: 767px) {
   .card {
     width: 188px;
     height: 270px;
@@ -305,7 +305,7 @@
     right: 10px;
     font-size: 10px;
   }
-}
+} */
 
 @media screen and (max-width: 682px) {
   .card {
